# vessel-seg

./: .gitignore  ASSUMPTIONS.md  README.md  pyproject.toml
config/: default.yaml  final.yaml.template
data/: README.md
doc/: CLI_INFER_DESIGN.md  CONFIG_DESIGN.md  DATA_MANIFEST_DESIGN.md  DUAL_SCALE_PIPELINE_DESIGN.md  FINAL_CONFIG_RULES.md  ILLUMINATION_CORRECTION_DESIGN.md  MULTIDIRECTIONAL_TOPHAT_DESIGN.md  NOTEBOOK_DEBUG_DESIGN.md  PLAN.md  SINGLE_SCALE_PIPELINE_DESIGN.md  UNSUPERVISED_METRICS_DESIGN.md
scripts/: run_infer.py
src/vessel_reproduction/: __init__.py  api.py  config_loader.py  config_schema.py  data_manifest.py  dual_scale_pipeline.py  illumination_correction.py  multidirectional_tophat.py  notebook_debug.py  single_scale_pipeline.py  unsupervised_metrics.py
tests/: test_api_interfaces.py  test_data_manifest_interfaces.py  test_dual_scale_pipeline_interfaces.py  test_illumination_correction_interfaces.py  test_multidirectional_tophat_interfaces.py  test_notebook_debug_interfaces.py  test_run_infer_interfaces.py  test_single_scale_pipeline_interfaces.py  test_unsupervised_metrics_interfaces.py
